--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
                 <h4 class="h4 service-item-title">Social Activity</h4>
 
                 <p class="service-item-text">
-                  I   am very much interested in learning website designing.I am interested in
-                   doing front-end development projects which boosts my knowledge in this field.
-                  "We don't just sell websites, we create websites that SELL." inspires me a lot
+                Social activists have various duties and responsibilities as they work to bring about positive social change and address important issues in society."The only way to deal with the world is to make one's self part of it." - Gandhi
+
+
                 </p>
               </div>
 
