--- a/index.html
+++ b/index.html
@@ -481,13 +481,12 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Iot based agriculture automation</h4>
+              <h4 class="h4 timeline-item-title">Wedding Decoration Website</h4>
 
-              <span>09/2021-10/2021</span>
+              <span>02/2023-03/2023</span>
 
               <p class="timeline-text">
-                Iot based agriculture automation enables automatically irrigate the agricultural fields. In addition the user can visually monitor the 
-                current status of the fields
+                Created an elegant, user-friendly wedding decoration website using React and Material-UI, featuring gold, silver, and platinum designs.Crafted an intuitive interface for detailed product information
               </p>
 
             </li>
